Correction align-items pour les enfants

--- a/grille-simple.css
+++ b/grille-simple.css
@@ -22,7 +22,7 @@ body {
     border-radius: 0.5rem;
     display: grid;
     justify-items: center;
-    justify-items: center;
+    align-items: center;
 }
 
 /* Grid Layout */
